# gcodeviewer

./: .gitignore  Makefile  README.md
cmake/: CMakeLists.txt
mac/: codegen.mac  segdistance.mac
src/: main.c  selected.c  selected.h
